# LenovoTool2_V1.0

./: .gitignore  Dockerfile  PRD_RESTRUCTURE.md  README.md  _capture_page.py  _run_demo.py  _screenshot.py  _screenshot_dashboard.py  _screenshot_v3.py  docker-compose.yml  pyproject.toml
.superpowers/brainstorm/visual/: server.js
config/: settings.yaml
docs/: PRD_V3.0.md
helm/: Chart.yaml  values.yaml
k8s/: deployment.yaml  namespace.yaml  service.yaml
resources/images/: Image.qrc  Image_rc.py  image.py
src/lenovo_tool/: __init__.py  main.py
src/lenovo_tool/core/: __init__.py  data_models.py  demo_datasource.py  di_container.py  dll_interface.py  dll_loader.py  exceptions.py  interfaces.py  register_definitions.py  unit_definitions.py
src/lenovo_tool/data/: __init__.py  dll_data_source.py  mock_data_source.py
src/lenovo_tool/services/: __init__.py  alert_engine.py  charge_mode.py  csv_export.py  data_acquisition.py  history_repository.py  life_prediction.py  log_data_service.py  metrics_service.py  state_manager.py
tests/: conftest.py
tests/core/: test_cell_voltage.py  test_data_models.py  test_register_definitions.py
tests/data/: test_data_sources.py
tests/integration/: test_integration.py
tests/services/: test_alert_engine.py  test_charge_mode.py  test_csv_export.py  test_data_acquisition.py  test_history_repository.py  test_life_prediction.py  test_metrics_service.py  test_state_manager.py
tests/ui/: test_main_view_model.py
tests/utils/: test_byte_utils.py  test_config_manager.py  test_config_manager_reload.py  test_di_container.py
(+47 files in other folders)
